--- a/Halloapp/pt.lproj/Localizable.stringsdict
+++ b/Halloapp/pt.lproj/Localizable.stringsdict
@@ -37,7 +37,7 @@
 	<key>feed.collapsed.n.users.added</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
-		<string>%#@n_users@</string>
+		<string>%#@n_usuários@</string>
 		<key>n_users</key>
 		<dict>
 			<key>NSStringFormatSpecTypeKey</key>
@@ -45,15 +45,15 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%d person was added</string>
+			<string>%d pessoa foi adicionada</string>
 			<key>other</key>
-			<string>%d people were added</string>
+			<string>%d pessoas foram adicionadas</string>
 		</dict>
 	</dict>
 	<key>feed.collapsed.n.users.joined</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
-		<string>%#@n_users@</string>
+		<string>%#@n_usuários@</string>
 		<key>n_users</key>
 		<dict>
 			<key>NSStringFormatSpecTypeKey</key>
@@ -61,15 +61,15 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%d person joined</string>
+			<string>%d pessoa entrou</string>
 			<key>other</key>
-			<string>%d people joined</string>
+			<string>%d pessoa entraram</string>
 		</dict>
 	</dict>
 	<key>feed.collapsed.n.users.left</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
-		<string>%#@n_users@</string>
+		<string>%#@n_usuários@</string>
 		<key>n_users</key>
 		<dict>
 			<key>NSStringFormatSpecTypeKey</key>
@@ -77,15 +77,15 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%d person left</string>
+			<string>%d pessoa saiu</string>
 			<key>other</key>
-			<string>%d people left</string>
+			<string>%d pessoas sairam</string>
 		</dict>
 	</dict>
 	<key>feed.collapsed.n.users.removed</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
-		<string>%#@n_users@</string>
+		<string>%#@n_usuários@</string>
 		<key>n_users</key>
 		<dict>
 			<key>NSStringFormatSpecTypeKey</key>
@@ -93,9 +93,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>d</string>
 			<key>one</key>
-			<string>%d person was removed</string>
+			<string>%d pessoa foi removida</string>
 			<key>other</key>
-			<string>%d people were removed</string>
+			<string>%d pessoas foram removidas</string>
 		</dict>
 	</dict>
 	<key>feed.privacy.value.n.contacts.excluded</key>
