--- a/Halloapp/fa.lproj/Localizable.strings
+++ b/Halloapp/fa.lproj/Localizable.strings
@@ -40,6 +40,9 @@
 /* First tab in the main app interface. */
 "activityCenter.promo.favorites" = "ویژگی جدید لیست مخاطبین را مشاهده کنید!";
 
+/* Title of a button that allows a location to be added. */
+"add.location.title" = "اضافه کردن مکان";
+
 /* Menu option for adding generic file */
 "add.media.option.document" = "مدرک";
 
@@ -281,7 +284,7 @@
 "camera.init.error.title" = "خطا در شروع";
 
 /* Text shown on the camera screen when composing a new moment. */
-"camera.moment.subtitle" = "لحظه‌ها بعد از ۲۴ ساعت ناپدید میشوند و فقط یک بار قابل مشاهده هستند";
+"camera.moment.subtitle" = "لحظه‌ها بعد از ۲۴ ساعت ناپدید میشوند";
 
 /* Text shown on the camera screen when composing a new moment to unlock someone else's moment. */
 "camera.moment.unlock.subtitle" = "برای مشاهده لحظه @%، لحظه خودتان را به اشتراک بگذارید";
@@ -419,7 +422,7 @@
 "chat.list.user.deleted.reaction.video" = "@$1% @$2% را از ویدیو حذف کرد";
 
 /* Text shown when user reacted to an audio */
-"chat.list.user.reacted.audio" = "@$1% به یک صدا عکس‌العمل @$2% نشان داد";
+"chat.list.user.reacted.audio" = "@$1% به یک پیام صوتی واکنش @$2% نشان داد";
 
 /* Text shown when user reacted to an image */
 "chat.list.user.reacted.image" = "@$1% به یک تصویر عکس‌العمل @$2% نشان داد";
@@ -449,7 +452,7 @@
 "chat.list.you.deleted.reaction.video" = "شما یک @1% از ویدیو حذف کردید";
 
 /* Text shown when you reacted to an audio */
-"chat.list.you.reacted.audio" = "شما با @1% عکس‌العمل به صدا نشان دادید";
+"chat.list.you.reacted.audio" = "شما با @1% واکنش به پیام صوتی نشان دادید";
 
 /* Text shown when you reacted to an image */
 "chat.list.you.reacted.image" = "شما با @1% عکس‌العمل به تصویر نشان دادید";
@@ -578,10 +581,10 @@
 "composer.button.edit" = "ویرایش";
 
 /* Title warning that a audio recording will be deleted */
-"composer.delete.recording.title" = "حذف پیام صوتی";
+"composer.delete.recording.title" = "حذف پیام صوتی؟";
 
 /* Warning message shown to the user before discarding a audio post */
-"composer.deletevoicenote.message" = "ضبط صدا ذخیره نمیشود اگر این پست را لغو کنید.";
+"composer.deletevoicenote.message" = "اگر این پست را لغو کنید صدای ضبط شده ذخیره نمیشود.";
 
 /* Title for alert when closing the post composer with a voice note */
 "composer.deletevoicenote.title" = "لغو پست؟";
@@ -668,7 +671,7 @@
 "create.group.name.title" = "نام";
 
 /* Title of group creation screen */
-"create.group.title" = "اطلاعات گروه";
+"create.group.title" = "گروه جدید";
 
 /* Prompt for the user to create their first post. */
 "create.your.first.post.1" = "اولین پست خود را آماده کنید";
@@ -729,6 +732,18 @@
 
 /* Indicates that an item has failed to be sent. */
 "failed.to.send" = "خطا در فرستادن";
+
+/* Number of contacts added to a group. */
+"feed.collapsed.n.users.added" = "feed.collapsed.n.users.added";
+
+/* Number of contacts that joined a group. */
+"feed.collapsed.n.users.joined" = "feed.collapsed.n.users.joined";
+
+/* Number of contacts that left a group. */
+"feed.collapsed.n.users.left" = "feed.collapsed.n.users.left";
+
+/* Number of contacts removed from a group. */
+"feed.collapsed.n.users.removed" = "feed.collapsed.n.users.removed";
 
 /* Text shown in place of a received post we are not able to decrypt yet. */
 "feed.comment.waiting" = "در انتظار این نظر. ممکن است طول بکشد.";
@@ -1258,6 +1273,12 @@
 /* Link that when tapped will open App Store so user can update to the latest version of the app. */
 "link.update.your.app" = "برنامه را به روز رسانی کنید.";
 
+/* Title to indicate that a fetch operation is in progress. */
+"locating.title" = "مکان";
+
+/* Displayed when a location fetch fails. */
+"location.fetch.error" = "خطا در مکان‌یابی";
+
 /* General message of the alert for failures in location sharing features. */
 "locationSharing.alert.error" = "خطا. لطفاً‌ بعداً‌ امتحان کنید.";
 
@@ -1413,7 +1434,7 @@
 "moments.swipe.for.more" = "برای اطلاعات بیشتر بکشید";
 
 /* Message displayed to say when moments will disappear. */
-"mymoment.disappear.time.label" = "لحظه شما با لیست مخاطبینتان به اشتراک گذاشته شد. لحظه‌ها بعد از ۲۴ ساعت ناپدید میشوند و فقط یک بار قابل مشاهده هستند.";
+"mymoment.disappear.time.label" = "لحظه شما با لیست مخاطبینتان به اشتراک گذاشته شد. لحظه‌ها بعد از ۲۴ ساعت ناپدید میشوند.";
 
 /* One of the contact actions in My Post screen. Verb. */
 "mypost.action.message" = "پیام";
@@ -1479,7 +1500,7 @@
 "not.in.group.banner.text" = "شما دیگر در این گروه نیستید";
 
 /* Push notification for a comment to message */
-"notification.comment.reaction" = "@% به یک نظر عکس‌العمل نشان داد";
+"notification.comment.reaction" = "@% به یک نظر واکنش نشان داد";
 
 /* Push notification for a new comment. Parameter is the text of the comment */
 "notification.commented.with.text" = "نظر: %@";
@@ -1494,7 +1515,7 @@
 "notification.location" = "📍مکان";
 
 /* Push notification for a reaction to message */
-"notification.message.reaction" = "%@ به پیام عکس‌العمل نشان داد";
+"notification.message.reaction" = "%@ به پیام واکنش نشان داد";
 
 /* New moment notification text to be shown to the user. */
 "notification.moment" = "لحظه جدید";
@@ -1548,16 +1569,16 @@
 "notification.one.video" = "ویدیو 📹";
 
 /* New moment unlock notification text to be shown to the user. */
-"notification.unlocked.moment.1" = "@% لحظه‌ای را به اشتراک گذاشت و لحظه شما را باز کرد";
+"notification.unlocked.moment.1" = "@% برای دیدن لحظه شما، لحظه‌ای را به اشتراک گذاشت";
 
 /* New moment unlock notification text to be shown to the user. */
-"notification.unlocked.moment.2" = "@$1% و @$2% لحظه‌ای را به اشتراک گذاشتند و لحظه شما را باز کرد";
+"notification.unlocked.moment.2" = "@$1% و @$2% برای دیدن لحظه شما، لحظه‌ای را به اشتراک گذاشتند";
 
 /* New moment unlock notification text to be shown to the user. */
-"notification.unlocked.moment.3" = "@$1% و @$2% و @$3% لحظه‌ای را به اشتراک گذاشتند و لحظه شما را باز کرد";
+"notification.unlocked.moment.3" = "@$1% و @$2% و @$3% برای دیدن لحظه شما، لحظه‌ای را به اشتراک گذاشتند";
 
 /* New moment unlock notification text to be shown to the user. */
-"notification.unlocked.moment.4" = "@$1% و @$2% و @$3% و دیگران لحظه‌ای را به اشتراک گذاشتند و لحظه شما را باز کرد";
+"notification.unlocked.moment.4" = "@$1% و @$2% و @$3% و دیگران برای دیدن لحظه شما، لحظه‌ای را به اشتراک گذاشتند";
 
 /* Missed video call notification text to be shown to the user. */
 "notification.videocall.missed" = "📹 تماس ویدیویی از دست رفته";
@@ -1647,7 +1668,7 @@
 "post.controller.picker.title" = "پست جدید";
 
 /* Body of alert indicating that a post's expiration does not match that set on a group */
-"post.expiration.mismatch" = "این پست @$1% منقضی میشود، در حالی که تنظیمات گروه @$2% را نشان میدهد.";
+"post.expiration.mismatch" = "این پست @$1% منقضی میشود، در حالی که محتویات گروه روی @$2% تنظیم شده است.";
 
 /* Displayed in place of a deleted feed post. */
 "post.has.been.deleted" = "این عکس حذف شده است";
@@ -1664,8 +1685,17 @@
 /* Header when selecting destinations to forward a message, this header appears above the feeds section */
 "post.privacy.header.feeds" = "لیست";
 
-/* Header when selecting destinations to forward a message, this header appears above the feeds section */
+/* Header when selecting destinations to forward a message, this header appears above the frequently contacted section */
 "post.privacy.header.frequentlyContacted" = "مخاطبین مکرر";
+
+/* Header when selecting a group to share with */
+"post.privacy.header.groups" = "به اشتراک گذاشتن فقط با یک گروه";
+
+/* Header when selecting destinations to forward a message, this header appears above the recent section */
+"post.privacy.header.recent" = "اخیر";
+
+/* Controller title for changing destination and privacy */
+"post.privacy.title" = "به اشتراک گذاشتن با...";
 
 /* Settings > Privacy: Title for the list of blocked contact and also setting menu item. */
 "privacy.list.blocked" = "مسدود شده‌ها";
@@ -1755,7 +1785,7 @@
 "registration.code.incorrect" = "کد درست نیست";
 
 /* Instructions for filling in SMS verification code. Parameter is formatted phone number */
-"registration.code.instructions" = "کدی که به %@ ارسال شد را وارد کنید";
+"registration.code.instructions" = "کد ارسالی به %@ را وارد کنید";
 
 /* Error message to display when we cannot send a verification code */
 "registration.code.request.error" = "خطا در ارسال کد. لطفاً بعداً‌ امتحان کنید.";
@@ -2048,6 +2078,9 @@
 /* Label for call bar (shows at top of screen during active call). Returns user to call screen when tapped. */
 "tap.return.call" = "برای بازگشت به تماس کلیک کنید";
 
+/* Action text that shows up next to your selected reaction. */
+"tap.to.remove.reaction" = "برای حذف کردن کلیک کنید";
+
 /* One of the items in context menu presented upon long press on web link. */
 "textlabel.context.menu.add.reading.list" = "افزودن به لیست خواندنی‌ها";
 
@@ -2140,6 +2173,9 @@
 
 /* Row in Settings screen */
 "title.privacy" = "حریم خصوصی";
+
+/* Title for the screen with information about who reacted to your content. */
+"title.reactions" = "واکنش‌ها";
 
 /* Title of screen where user can add members during group creation flow */
 "title.select.group.members.create.title" = "اضافه کردن عضو";
