--- a/Halloapp/fr.lproj/Localizable.strings
+++ b/Halloapp/fr.lproj/Localizable.strings
@@ -1207,6 +1207,12 @@
 /* Header when selecting all or some contacts to share with */
 "post.privacy.header.contacts" = "Qui verra cette publication";
 
+/* Header when selecting a group to share with */
+"post.privacy.header.groups" = "Partager seulement avec un groupe";
+
+/* Controller title for changing destination and privacy */
+"post.privacy.title" = "Partager avec...";
+
 /* Settings > Privacy: Title for the list of blocked contact and also setting menu item. */
 "privacy.list.blocked" = "Bloqué";
 
