--- a/Halloapp/id.lproj/Localizable.strings
+++ b/Halloapp/id.lproj/Localizable.strings
@@ -1535,6 +1535,12 @@
 /* Header when selecting destinations to forward a message, this header appears above the feeds section */
 "post.privacy.header.feeds" = "Umpan";
 
+/* Header when selecting a group to share with */
+"post.privacy.header.groups" = "Grup Anda";
+
+/* Controller title for changing destination and privacy */
+"post.privacy.title" = "Kontak";
+
 /* Settings > Privacy: Title for the list of blocked contact and also setting menu item. */
 "privacy.list.blocked" = "Diblokir";
 
