--- a/Halloapp/tr.lproj/Localizable.strings
+++ b/Halloapp/tr.lproj/Localizable.strings
@@ -1535,6 +1535,12 @@
 /* Header when selecting destinations to forward a message, this header appears above the feeds section */
 "post.privacy.header.feeds" = "Yayınlar";
 
+/* Header when selecting a group to share with */
+"post.privacy.header.groups" = "Yalnızca bir grupla paylaş";
+
+/* Controller title for changing destination and privacy */
+"post.privacy.title" = "Şununla paylaş:";
+
 /* Settings > Privacy: Title for the list of blocked contact and also setting menu item. */
 "privacy.list.blocked" = "Engellendi";
 
