--- a/Notification Service Extension/de.lproj/Localizable.strings
+++ b/Notification Service Extension/de.lproj/Localizable.strings
@@ -172,6 +172,9 @@
 /* New moment screenshot notification text to be shown to the user. */
 "notification.moment.screenshot" = "%@ hat einen Screenshot von deinem Moment gemacht";
 
+/* New post notification text when post is multiple documents without caption. */
+"notification.n.documents" = "notification.n.documents";
+
 /* New post notification text when post is multiple photos without caption. */
 "notification.n.photos" = "notification.n.photos";
 
